# String-Theory

./: CMakeLists.txt  TODO.txt  main.cpp  resources.rc
include/: id3.h  music.h  tools.h
src/: id3.cpp  music.cpp  tools.cpp
